--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,1 +1,10 @@
+#container{
+    width: 360px;
+    margin: 0 auto;
+    border: 2px solid steelblue;
+}
 
+.completed {
+    color: red;
+    text-decoration: line-through;
+}
